examples/test/testpolicy10818.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10818
  namespace: namespace128
spec:
  podSelector:
    matchLabels:
      key8: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value40
          key17: value41
          key23: value45
      podSelector:
        matchLabels:
          key13: value19
          key3: value39
